--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query-devtools": "^5.8.1",
     "@tanstack/react-table": "^8.10.7",
-    "axios": "^1.6.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.20.0",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
+    "use-local-storage": "^3.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
